--- a/Simulator/css.css
+++ b/Simulator/css.css
@@ -61,18 +61,19 @@
   left: 700px;
   right: 0;
   top: 0;
-  bottom: 200px;
+  bottom: 35%;
   border-left: solid 1px #ccc;
 }
 
 .ram-browser {
-  position:absolute;
-  left:700px;
+  position: absolute;
+  left: 700px;
   border-left: solid 1px #ccc;
   border-top: solid 1px #ccc;
-  right:0;
-  height:200px;
-  bottom:0;
+  right: 0;
+  min-height: 200px;
+  height: 35%;
+  bottom: 0;
 }
 
 .highlight-line {
@@ -80,23 +81,61 @@
 }
 
 .simple {
-  position:absolute;
-  left:0;
-  width:100%;
+  position: absolute;
+  left: 0;
+  width: 100%;
   height: 100%;
-  top:0;;
+  top: 0;
+  ;
 }
 
 .simple-column {
   width: 50%;
-  float:left;
+  float: left;
   text-align: center;
   line-height: 25px;
 }
 
 .simple-row {
-  position:relative;
+  position: relative;
   width: 100%;
   height: 20%;
-  float:left;
+  float: left;
+}
+
+@media all and (max-height: 500px) {
+  .display {
+    bottom: 200px;
+  }
+}
+
+.about{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -250px;
+  margin-left: -300px;
+  width:600px;
+  height:500px;
+  background-color: #eee;
+  z-index: 100;
+  border: solid 1px #bbb;
+}
+
+.about-title {
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 15px;
+  margin-top: 7px;
+}
+
+.about-peragraph {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 15px;
+}
+
+.about-license {
+  font-size: 0.8em;
+  margin-left: 30px;
 }
